syntax = "proto3";

message GlobalMessage {
	string info = 1;
}
